--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@ngx-loading-bar/core": "^5.1.1",
+    "@ngx-loading-bar/router": "^5.1.1",
     "angular-material": "^1.2.2",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
+    "ng2-material-dropdown": "^0.11.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-cookie": "^5.0.1",
@@ -30,6 +33,7 @@
     "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
+    "subsink": "^1.0.2",
     "tslib": "^2.0.0",
     "underscore": "^1.12.0",
     "zone.js": "~0.11.3"
